unpackaged/main/default/objects/Future_Stock__c/Future_Stock__c.object-meta.xml
<CustomObject>
    <label>Future Stock</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Future Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>