unpackaged/main/default/objects/Future_Stock__c/fields/Date_of_Release__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Release__c</fullName>
    <label>Date of Release</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>