unpackaged/main/default/objects/Future_Stock__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Future Stocks</relationshipLabel>
    <relationshipName>Future_Stocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>