unpackaged/main/default/objects/Future_Stock__c/fields/ManuallyManage__c.field-meta.xml
<CustomField>
    <fullName>ManuallyManage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually manage</label>
    <type>Checkbox</type>
</CustomField>