unpackaged/main/default/objects/Future_Stock__c/fields/manualStock__c.field-meta.xml
<CustomField>
    <fullName>manualStock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, any stock coming from V3 or CEGID will be ignored when updating OCI</inlineHelpText>
    <label>Manual Stock</label>
    <type>Checkbox</type>
</CustomField>