unpackaged/main/default/objects/Future_Stock__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <inlineHelpText>SKU maximum length is 8.</inlineHelpText>
    <label>SKU</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>