unpackaged/main/default/objects/Future_Stock__c/validationRules/CheckQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckQuantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The quantity should be &gt;= 0</errorMessage>
</ValidationRule>