unpackaged/main/default/objects/Future_Stock__c/validationRules/CheckQuantityAndSKU.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckQuantityAndSKU</fullName>
    <active>true</active>
    <errorConditionFormula>OR ( Quantity__c  &lt;= 0,  LEN( SKU__c ) &lt; 8 , NOT (  REGEX( SKU__c , &quot;[0-9]+&quot;) ))</errorConditionFormula>
    <errorMessage>SKU length must be equal to 8 characters and must contain only numbers.
Quantity must be greater than 0.</errorMessage>
</ValidationRule>