unpackaged/main/default/objects/Future_Stock__c/validationRules/CheckSKU.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSKU</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (  REGEX( SKU__c , &quot;[0-9]+&quot;) )</errorConditionFormula>
    <errorDisplayField>SKU__c</errorDisplayField>
    <errorMessage>SKU must contain only numbers.</errorMessage>
</ValidationRule>