unpackaged/main/default/objects/Future_Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Quantity__c</columns>
    <columns>Date_of_Release__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>